--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "http-errors": "^1.7.2",
@@ -30,6 +31,7 @@
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "mongodb": "^3.6.0",
     "mongoose": "^5.12.13",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
